--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
                 <h3>Frontend Developer</h3>
                 <span class="animate" style="--i:4;"></span>
             </div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, dolore repellendus odio aut,
-                voluptas error reiciendis, nemo ea autem dolores ipsam accusantium quaerat deleniti quisquam voluptates
-                excepturi?<span class="animate" style="--i:3;"></span></p>
+            <p>Welcome to my personal website! Explore who I am, my educational journey, professional experience, skill
+                set, and how to get in touch.?<span class="animate" style="--i:3;"></span></p>
 
             <div class="btn-box">
                 <a href="path_to_your_cv/resume.pdf" download="Szabolcs_Balogh_CV.pdf" class="btn">Download CV</a>
@@ -75,16 +74,14 @@
 
         <div class="about-content">
             <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolores asperiores voluptatibus.
-                Quisquam incidunt odio corporis quae facilis, qui mollitia provident odit quam hic aut voluptates porro
-                neque eos soluta aliquam exercitationem nulla numquam repudiandae? Quaerat laborum amet ipsam architecto
-                dolore quasi magni deserunt, officia possimus, rem ad minima reprehenderit!<span class="animate scroll"
-                    style="--i:4;"></span></p>
+            <p>Hello, I'm Szabolcs Balogh, a 25-year-old Junior Frontend Developer based in Hungary. Fresh out of a
+                bootcamp, I'm eager to dive into the world of web development. My strong command of English enables
+                seamless communication, and I'm ready to explore opportunities beyond borders. I take pride in my
+                precision, thrive in collaborative settings, possess a keen problem-solving mind, and pride myself on
+                being a fast learner. I'm on the hunt for my next challenge and excited to bring my skills to your
+                team!<span class="animate scroll" style="--i:4;"></span></p>
 
-            <div class="btn-box btns">
-                <a href="#" class="btn">Read More</a>
-                <span class="animate scroll" style="--i:5;"></span>
-            </div>
+
         </div>
     </section>
 
@@ -226,7 +223,7 @@
                         </div>
 
                         <div class="progress">
-                            <h3>Precise <span>90%</span></h3>
+                            <h3>Precision <span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -296,7 +293,7 @@
     <!--Footer design-->
     <footer class="footer">
         <div class="footer-text">
-            <p>Szabolcs Balogh.</p>
+            <p>szabi2022@gmail.com</p>
 
             <span class="animate scroll" style="--i:1;"></span>
         </div>
