--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 set, and how to get in touch.?<span class="animate" style="--i:3;"></span></p>
 
             <div class="btn-box">
-                <a href="path_to_your_cv/resume.pdf" download="Szabolcs_Balogh_CV.pdf" class="btn">Download CV</a>
+                <a href="/CV/CV Szabolcs Balogh #1.pdf" download="Szabolcs_Balogh_CV.pdf" class="btn">Download CV</a>
                 <a href="#contact" class="btn">Contact me</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
