--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 set, and how to get in touch.?<span class="animate" style="--i:3;"></span></p>
 
             <div class="btn-box">
-                <a href="/CV/CV Szabolcs Balogh #1.pdf" download="Szabolcs_Balogh_CV.pdf" class="btn">Download CV</a>
+                <a href="#about" class="btn">Read more</a>
                 <a href="#contact" class="btn">Contact me</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
@@ -315,14 +315,6 @@
             emailjs.init('-SN79-2NGWEWfXoI-');
         })();
     </script>
-
-
-
-
-
-
-
-
 
     <!--<script src="/star-animation/stars.js"></script>-->
 </body>
